# ServerMonitor

./: .gitmodules  CMakeLists.txt  LICENSE.txt  Makefile  README.md  config.json  status.html
servermon/servermon/: main.m
servermon/servermon.xcodeproj/: project.pbxproj
src/: curl.cpp  curl.hpp  http_apple.mm  http_curl.cpp  main.cpp  types.hpp  url_apple.mm
